--- a/core/templates/profiles/register.html
+++ b/core/templates/profiles/register.html
@@ -1,11 +1,38 @@
-<!-- registration/register.html -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>User Registration</title>
+</head>
+<body>
+    <h2>User Registration</h2>
+    <form method="post">
+        {% csrf_token %}
 
+        <div class="fieldWrapper">
+            {{ user_form.username.label_tag }}:
+            {{ user_form.username }}
+            {{ user_form.username.errors }}
+        </div>
 
+        <div class="fieldWrapper">
+            {{ user_form.email.label_tag }}:
+            {{ user_form.email }}
+            {{ user_form.email.errors }}
+        </div>
 
-<h2>Register</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-</form>
+        <div class="fieldWrapper">
+            {{ user_form.password1.label_tag }}:
+            {{ user_form.password1 }}
+            {{ user_form.password1.errors }}
+        </div>
 
+        <div class="fieldWrapper">
+            {{ user_form.password2.label_tag }}:
+            {{ user_form.password2 }}
+            {{ user_form.password2.errors }}
+        </div>
+
+        <button type="submit">Register</button>
+    </form>
+</body>
+</html>
