--- a/core/templates/pages/index.html
+++ b/core/templates/pages/index.html
@@ -49,7 +49,7 @@
               <a href="{% url 'admin:index' %}" class="nav-link">Dashboard</a>
                 
               {% else %}
-              <a href="{% url 'profiles:profile' %}" class="nav-link">Dashboard</a>
+              <a href="{% url 'appointments:appointment_list' %}" class="nav-link">Dashboard</a>
               {% endif %}
               
               
