--- a/core/templates/calendarapp/navbar.html
+++ b/core/templates/calendarapp/navbar.html
@@ -119,7 +119,7 @@
                           <li class="nav-item">
                             <a class="nav-link" href="./#">
                               <span class="nav-link-title">
-                                Second
+                                external google sheets
                               </span>
                               <span class="badge badge-sm bg-red">2</span>
                             </a>
@@ -132,7 +132,7 @@
                             </a>
                             <div class="dropdown-menu">
                               <a class="dropdown-item" href="./#">
-                                First
+                                external google sheets
                               </a>
                               <a class="dropdown-item" href="./#">
                                 Second
